# limine-manager

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  SECURITY.md  cppcheck-suppressions.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
completions/: _limine-manager  limine-manager.bash
config/: limine-manager.conf.example
docs/: DECISIONS.md  PROJECT_CONTEXT.md  RELEASING.md  ROADMAP-1.6.0.md  limine-manager.8  migration-1.0.md  release-checklist.md
docs/releases/: 1.0.0.md  1.0.1.md  1.1.0.md  1.3.0.md  1.3.1.md  1.3.2.md  1.3.3.md  1.4.0.md  1.4.1.md  1.4.2.md
include/limine_manager/application/: apply_service.hpp  automation.hpp  backup_service.hpp  change_planner.hpp  discovery_service.hpp  preview_service.hpp  refresh_service.hpp  rollback_planner.hpp  rollback_service.hpp  secure_boot_apply_service.hpp  secure_boot_transaction.hpp  snapshot_selector.hpp  status_service.hpp  validation_service.hpp
include/limine_manager/config/: config.hpp  config_loader.hpp  theme.hpp
include/limine_manager/domain/: kernel_cmdline.hpp  menu.hpp  rollback.hpp  validation.hpp
include/limine_manager/infrastructure/: btrfs_client.hpp  efi_image_transaction.hpp  filesystem.hpp  kernel_discovery.hpp  process.hpp  secure_boot_tools.hpp  secure_file_ops.hpp  snapper_client.hpp  system_detector.hpp
include/limine_manager/model/: system_model.hpp
include/limine_manager/render/: limine_renderer.hpp  unified_diff_renderer.hpp
packaging/: PKGBUILD
scripts/: 90-limine-manager-snapper  create-release-tarball  format  format-check  limine-manager-update  verify-release-assets
src/: main.cpp
src/application/: apply_service.cpp  automation.cpp  backup_service.cpp  change_planner.cpp  discovery_service.cpp  preview_service.cpp  refresh_service.cpp  rollback_planner.cpp  rollback_service.cpp  secure_boot_apply_service.cpp  secure_boot_transaction.cpp  status_service.cpp  validation_service.cpp
src/config/: config_loader.cpp  theme.cpp
src/domain/: kernel_cmdline.cpp  menu.cpp  rollback.cpp  validation.cpp
src/infrastructure/: btrfs_client.cpp  efi_image_transaction.cpp  filesystem.cpp  kernel_discovery.cpp  process.cpp  secure_boot_tools.cpp  secure_file_ops.cpp  snapper_client.cpp  system_detector.cpp
src/render/: limine_renderer.cpp  unified_diff_renderer.cpp
stage/usr/lib/x86_64-linux-gnu/systemd/system/: limine-manager-refresh.service  limine-manager-refresh.timer
stage/usr/share/bash-completion/completions/: limine-manager
stage/usr/share/limine-manager/: limine-manager.conf.example
stage/usr/share/limine-manager/hooks/: 90-limine-manager.hook.example
stage/usr/share/man/man8/: limine-manager.8
stage/usr/share/zsh/site-functions/: _limine-manager
tests/: efi_image_transaction_tests.cpp  runtime_lock_tests.cpp  secure_boot_apply_service_tests.cpp  secure_boot_tools_tests.cpp  secure_boot_transaction_hardening_tests.cpp  secure_file_ops_tests.cpp  tests.cpp
tests/fixtures/config/: custom.conf
tests/fixtures/system/: kernel-cmdline  os-release
